# aoc

./: .env.example  .gitignore  Cargo.toml  README.md  results.json  rust-toolchain.toml
.github/workflows/: lint.yaml  run.yaml
benches/: bench2022.rs
results/: 2019.json  2021.json  2022.json  2023.json  2024.json
scripts/: day19_rotgen.py  day_template.rs  fetch_inputs.py  new_day.py
src/: aoc.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  driver.rs  grid.rs  helpers.rs  lib.rs  main.rs  traits.rs
src/aoc2019/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  intcode.rs  mod.rs
src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day19_rotations.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  mod.rs
src/aoc2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc2024/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  mod.rs
