[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "thin"
panic = "abort"

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
itertools = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.9"
ahash = "0.8"
string-interner = "0.14"
nalgebra = "0.32"
rayon = "1.7"
gcd = "2.3"