[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "thin"
panic = "abort"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
string-interner = "0.15"
nalgebra = "0.32"
gcd = "2.3"
rustworkx-core = "0.14.1"
