[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "thin"
panic = "abort"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
string-interner = "0.14"
nalgebra = "0.33"
gcd = "2.3"
rustworkx-core = "0.15.1"
